fixed breadcrumbs z-index

--- a/sass/elements/layout/_main-layout.scss
+++ b/sass/elements/layout/_main-layout.scss
@@ -136,7 +136,7 @@
 #breadcrumbs { //contenitore
   margin-top: -$line-height * 2;
   position: absolute;
-  z-index: 9999;
+  z-index: 9;
   left: 0;
   font-size: 1em;
   right: 0;
